Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-36919

Qt Location Map does not keep Mouse Grab

XMLWordPrintable

      Using SailfishOS SDK, I have a QtLocation Map item in a Page.

      Mousegrab event is not captured by Map so it is catched by the parent Page.

      According to Jolla Dev on Sailfish-Devel Mailing list: https://lists.sailfishos.org/pipermail/devel/2014-February/003468.html

      This looks like a bug in the Qt Location Map type. It should be calling
      QQuickItem::setKeepMouseGrab() once a gesture is detected to prevent any input
      event filters defined in parent items (such as the PageStack) from getting
      those events.

      See attached QtCreator project for an example

        1. MapMouseGrab.tar.gz
          9 kB
          Antoine Vacher
        For Gerrit Dashboard: QTBUG-36919
        # Subject Branch Project Status CR V

            michal Michal Klocek
            tigre-bleu Antoine Vacher
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes