Add mouse and touch keep grabs and prevent stealing handling.

Add preventStealing setting to map gesture area.
New functionality mirrors MouseArea preventStealing functionality.

Task-number: QTBUG-36919
Change-Id: I4c077f97c61dbd0f6aeb031daa01e167b22cb48c
Reviewed-by: Alex Blasche <alexander.blasche@theqtcompany.com>